@@ -609,7 +609,7 @@ MagickExport MagickBooleanType IsGrayImage(const Image *image,
   if ((image->type == BilevelType) || (image->type == GrayscaleType) ||
       (image->type == GrayscaleMatteType))
     return(MagickTrue);
-  if (image->colorspace == CMYKColorspace)
+  if ((image->colorspace == sRGB) || (image->colorspace == CMYKColorspace))
     return(MagickFalse);
   type=BilevelType;
   image_view=AcquireCacheView(image);
@@ -692,7 +692,7 @@ MagickExport MagickBooleanType IsMonochromeImage(const Image *image,
     (void) LogMagickEvent(TraceEvent,GetMagickModule(),"%s",image->filename);
   if (image->type == BilevelType)
     return(MagickTrue);
-  if (image->colorspace == CMYKColorspace)
+  if ((image->colorspace == sRGB) || (image->colorspace == CMYKColorspace))
     return(MagickFalse);
   type=BilevelType;
   image_view=AcquireCacheView(image);
